<!--
  ~ Copyright 2017 huxizhijian
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name" translatable="false">汗汗漫画阅读器</string>
    <string name="string_prev_btn_gallery" translatable="false">上一卷</string>
    <string name="string_next_btn_gallery" translatable="false">下一卷</string>
    <string name="searchable_label" translatable="false">结果列表</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="search_hint_content" translatable="false">搜索…</string>
    <string name="loading_search" translatable="false">正在努力获取分类列表中…</string>
    <string name="comic_result_list" translatable="false">结果列表</string>
    <string name="loading_search_result" translatable="false">获取漫画列表中…</string>
    <string name="comic_title" translatable="false">漫画名</string>
    <string name="comic_author" translatable="false">作者名</string>
    <string name="desc_chapter" translatable="false">情况简介</string>
    <string name="no_network" translatable="false">没有网络!</string>
    <string name="menu_popup_sync" translatable="false">刷新</string>
    <string name="menu_download_list" translatable="false">下载</string>
    <string name="menu_config" translatable="false">阅读</string>
    <string name="menu_exit" translatable="false">退出</string>
    <string name="app_name_short" translatable="false">汗汗漫画</string>
    <string name="tab_search" translatable="false">搜索</string>
    <string name="tab_history" translatable="false">历史</string>
    <string name="tab_mark" translatable="false">收藏</string>
    <string name="tab_config" translatable="false">设置</string>
    <string name="author_name" translatable="false">by huxizhijian</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="start_download" translatable="false">开始下载</string>
    <string name="all_select" translatable="false">全选</string>
    <string name="pause" translatable="false">暂停</string>
    <string name="manager" translatable="false">管理</string>
    <string name="all_start" translatable="false">全部开始</string>
    <string name="all_pause" translatable="false">全部暂停</string>
    <string name="chapter_name" translatable="false">章节名</string>
    <string name="delete" translatable="false">删除</string>
    <string name="mark" translatable="false">收藏</string>
    <string name="read" translatable="false">阅读</string>
    <string name="download" translatable="false">下载</string>
    <string name="share" translatable="false">分享</string>
    <string name="menu_all_stop" translatable="false">强制停止任务</string>
    <string name="about" translatable="false">关于</string>
    <string name="advance" translatable="false">高级</string>
    <string name="download_setting" translatable="false">下载设置</string>
    <string name="app_author_info" translatable="false"><![CDATA[huxizhijian  <huxizhijian92@gmail.com>]]></string>
    <string name="search_comic" translatable="false">搜索漫画：</string>
    <string name="classified_list" translatable="false">分类列表：</string>
    <string name="search_author" translatable="false">搜作者</string>
    <string name="none_marked" translatable="false">你还没有收藏漫画，快去搜索吧。</string>
    <string name="comic_chapter_list" translatable="false">漫画目录列表：</string>
    <string name="app_github" translatable="false">https://github.com/huxizhijian/HHComicViewer</string>
    <string name="comic_info" translatable="false">漫画简介</string>
    <string name="clear_the_cache" translatable="false">清除在线阅读缓存</string>
    <string name="recommendation" translatable="false">推荐</string>
    <string name="home" translatable="false">主页</string>
    <string name="hot_comics" translatable="false">热点漫画</string>
    <string name="more" translatable="false">更多</string>
    <string name="rank" translatable="false">排行榜</string>
    <string name="classifies" translatable="false">分类</string>

    <integer name="anim_duration_medium" translatable="false">500</integer>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="moe" translatable="false">萌系</string>
    <string name="search" translatable="false">搜索</string>
    <string name="setting" translatable="false">设置</string>
    <string name="search_hint" translatable="false">输入漫画名或作者名…</string>
    <string name="search_label" translatable="false">搜索</string>

    <!-- transition name  -->
    <string name="image_transition_name" translatable="false">image_transition</string>
    <string name="transition_search_back" translatable="false">transition_search_back</string>
    <string name="error" translatable="false">发生错误</string>
    <string name="no_result" translatable="false">没有获取到漫画</string>
    <string name="no_network_please_retry" translatable="false">没有网络，请开启网络后再点击重试</string>
    <string name="clear_search_history" translatable="false">清除搜索历史</string>
    <string name="enter_page_want_to_jump" translatable="false">请输入想跳转的页数</string>
    <string name="ensure_delete_mark" translatable="false">是否确定删除收藏？</string>
    <string name="delete_all_chapter" translatable="false">删除下载的章节图片</string>
    <string name="comic_details" translatable="false"><![CDATA[漫画详情>]]></string>
    <string name="edit" translatable="false">编辑</string>
    <string name="right" translatable="false">确定</string>

    <string name="app_version" translatable="false">汗汗漫画阅读器  v1.08.2</string>
    <string name="loading" translatable="false">加载中…</string>
    <string name="retry" translatable="false">重试</string>
    <string name="search_query_will_no_be_empty" translatable="false">搜索内容不能为空！</string>
    <string name="press_again_to_exit" translatable="false">再按一次退出</string>
    <string name="clear_successful" translatable="false">成功清除！</string>

</resources>
