<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:huxi="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_popup_sync"
        android:icon="@mipmap/ic_refresh_grey600_48dp"
        android:orderInCategory="0"
        android:title="@string/menu_popup_sync"
        huxi:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_download_list"
        android:orderInCategory="1"
        android:title="@string/menu_download_list"
        huxi:showAsAction="never"/>

    <item
        android:id="@+id/menu_config"
        android:orderInCategory="2"
        android:title="@string/menu_config"
        huxi:showAsAction="never"/>

    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="3"
        android:title="@string/menu_exit"
        huxi:showAsAction="never"/>

</menu>