<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:huxi="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_manager_sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@mipmap/ic_refresh_black_24dp"
        android:orderInCategory="0"
        android:title="@string/menu_popup_sync"
        huxi:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/menu_download_setting"
        android:orderInCategory="1"
        android:title="@string/download_setting"
        />

    <item
        android:id="@+id/menu_all_stop"
        android:orderInCategory="2"
        android:title="@string/menu_all_stop"
        huxi:showAsAction="never"/>

</menu>