<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016-2018 huxizhijian
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="open_reading_setting"
        android:summary="打开阅读设置"
        android:title="阅读设置"/>

    <Preference
        android:key="open_download_setting"
        android:summary="打开下载设置"
        android:title="下载设置"/>

    <Preference
        android:key="open_advance_setting"
        android:summary="打开高级设置"
        android:title="高级设置"/>

    <Preference
        android:key="author"
        android:summary="@string/app_author_info"
        android:title="作者"/>

    <Preference
        android:key="app_version"
        android:summary="@string/app_version"
        android:title="版本号"/>

    <Preference
        android:key="app_github"
        android:summary="@string/app_github"
        android:title="github主页"/>

</PreferenceScreen>