<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:gravity="top"
    android:orientation="vertical"
    tools:context="org.huxizhijian.hhcomicviewer2.activities.DownloadManagerActivity">

    <include layout="@layout/toolbar"/>

    <ExpandableListView
        android:id="@+id/elv_download_manager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>

    <TextView
        android:id="@+id/textView_storage_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="left"/>

    <LinearLayout
        android:id="@+id/ll_download_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_linear_layout"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/btn_download_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager"/>

        <Button
            android:id="@+id/btn_delete_download_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_all_start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_start"/>

    </LinearLayout>


</LinearLayout>
