<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_vol_card_view_margin"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">

    <LinearLayout
            android:id="@+id/ll_search_btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView_search_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"
                android:src="@mipmap/ic_menu_search"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <org.huxizhijian.hhcomicviewer2.view.InstantAutoCompleteTextView
                android:id="@+id/actv_search_content"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search_hint_content"
                android:imeOptions="actionSearch"
                android:lines="1"
                android:padding="2dp"
                android:textColor="#FF666666"/>

            <ImageButton
                android:id="@+id/ib_search_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:padding="0dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_menu_search"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/classified_list"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/loading_layout_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/pb_search_wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loading_search"
            android:textColor="#8b8a8a"
            android:textSize="12sp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_classifies_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:focusable="false"
        android:visibility="gone"/>

</LinearLayout>
